syntax = "proto3";
package akash.base.v1beta3;

import "gogoproto/gogo.proto";

option go_package = "pkg.akt.dev/go/node/types/v1beta3";

// Unit stores cpu, memory and storage metrics
message ResourceValue {
  option (gogoproto.equal) = true;
  bytes val = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customtype) = "pkg.akt.dev/go/node/types/sdk.Int"
  ];
}
