syntax = "proto3";
package akash.deployment.v1beta4;

import "gogoproto/gogo.proto";

import "akash/base/attributes/v1/attribute.proto";
import "akash/deployment/v1beta4/resourceunit.proto";

option go_package = "pkg.akt.dev/go/node/deployment/v1beta4";

// GroupSpec defines a specification for a group in a deployment on the network.
// This includes attributes like the group name, placement requirements, and resource units.
message GroupSpec {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // Name is the name of the group.
  string name = 1 [
    (gogoproto.jsontag)  = "name",
    (gogoproto.moretags) = "yaml:\"name\""
  ];

  // Requirements specifies the placement requirements for the group.
  // This determines where the resources in the group can be deployed.
  akash.base.attributes.v1.PlacementRequirements requirements = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "requirements",
    (gogoproto.moretags) = "yaml:\"requirements\""
  ];

  // Resources is a list containing the resource units allocated to the group.
  // Each ResourceUnit defines the specific resources (e.g., CPU, memory) assigned.
  repeated ResourceUnit resources = 3 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "ResourceUnits",
    (gogoproto.jsontag)      = "resources",
    (gogoproto.moretags)     = "yaml:\"resources\""
  ];
}
